--- a/action.yml
+++ b/action.yml
@@ -26,6 +26,7 @@ runs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+      shell: bash
 
     - name: Run translation script
       run: python translator.py
