--- a/action.yml
+++ b/action.yml
@@ -22,13 +22,19 @@ inputs:
     description: "Check if input file has changes respect to the previous head before translating"
     required: false
     default: "true"
+  github_token:
+    description: "GitHub token for authentication"
+    required: false
+    default: "${{ github.token }}"
   
 
 runs:
   using: "composite"
   steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
+      with:
+        token: ${{ inputs.github_token }}
 
     - name: Setup Python
       uses: actions/setup-python@v4
