--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,10 @@ inputs:
     description: "Check if input file has changes respect to the previous head before translating"
     required: false
     default: "true"
+  update_only_new:
+    description: "Only translate new keys, preserve existing translations"
+    required: false
+    default: "true"
   github_token:
     description: "GitHub token for authentication"
     required: false
@@ -58,12 +62,26 @@ runs:
         INPUT_PREVIOUS_HEAD: ${{ inputs.previous_head }}
         INPUT_CURRENT_HEAD: ${{ inputs.current_head }}
         INPUT_EVALUATE_CHANGES: ${{ inputs.evaluate_changes }}
+        INPUT_UPDATE_ONLY_NEW: ${{ inputs.update_only_new }}
 
     - name: Commit and push translations
       run: |
-        git config --local user.name "github-actions[bot]"
-        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        # Try to get bot info from token, fallback to github-actions if it fails
+        BOT_INFO=$(gh api /user 2>/dev/null || echo "{}")
+        BOT_NAME=$(echo "$BOT_INFO" | jq -r '.login // "github-actions[bot]"')
+        BOT_ID=$(echo "$BOT_INFO" | jq -r '.id // "41898282"')
 
+        # If login already contains [bot], use as-is, otherwise add [bot]
+        if [[ "$BOT_NAME" == *"[bot]"* ]]; then
+          GIT_NAME="$BOT_NAME"
+        else
+          GIT_NAME="${BOT_NAME}[bot]"
+        fi
+
+        git config --local user.name "$GIT_NAME"
+        git config --local user.email "${BOT_ID}+${GIT_NAME}@users.noreply.github.com"
+
+        echo "Committing as: $GIT_NAME"
         echo "Checking for changes..."
         git status
 
@@ -79,3 +97,5 @@ runs:
           echo "✓ Changes pushed successfully"
         fi
       shell: bash
+      env:
+        GH_TOKEN: ${{ inputs.github_token }}
