--- a/action.yml
+++ b/action.yml
@@ -66,22 +66,9 @@ runs:
 
     - name: Commit and push translations
       run: |
-        # Try to get bot info from token, fallback to github-actions if it fails
-        BOT_INFO=$(gh api /user 2>/dev/null || echo "{}")
-        BOT_NAME=$(echo "$BOT_INFO" | jq -r '.login // "github-actions[bot]"')
-        BOT_ID=$(echo "$BOT_INFO" | jq -r '.id // "41898282"')
+        git config --local user.name "github-actions[bot]"
+        git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-        # If login already contains [bot], use as-is, otherwise add [bot]
-        if [[ "$BOT_NAME" == *"[bot]"* ]]; then
-          GIT_NAME="$BOT_NAME"
-        else
-          GIT_NAME="${BOT_NAME}[bot]"
-        fi
-
-        git config --local user.name "$GIT_NAME"
-        git config --local user.email "${BOT_ID}+${GIT_NAME}@users.noreply.github.com"
-
-        echo "Committing as: $GIT_NAME"
         echo "Checking for changes..."
         git status
 
@@ -97,5 +84,3 @@ runs:
           echo "✓ Changes pushed successfully"
         fi
       shell: bash
-      env:
-        GH_TOKEN: ${{ inputs.github_token }}
